--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.83.0",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "phaser": "^3.90.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
